--- a/ir_sim/simulation_experiment/navigation_with_obstacle/dynamic_obstacle.yaml
+++ b/ir_sim/simulation_experiment/navigation_with_obstacle/dynamic_obstacle.yaml
@@ -29,15 +29,17 @@ polygon_robots:
   vector_size: 0.8
 
 obs_polygons:
-  number: 2
+  number: 3
   vertexes_list: [
 #                   [[0.4, 4.6], [1.6, 4.6], [1.6, 5.4], [0.4, 5.4]]
                    [[1.0, 4.7], [1.6, 4.7], [1.6, 5.3], [1.0, 5.3]],
-                   [[8.2, 1.7], [8.8, 1.7], [8.8, 2.3], [8.2, 2.3]]
+                   [[8.2, 1.7], [8.8, 1.7], [8.8, 2.3], [8.2, 2.3]],
+                   [[4.0, 6.5], [6.0, 6.5], [6.0, 8.0], [4.0, 8.0]]
                   ]
-  obs_model: ['dynamic', 'dynamic']
+  obs_model: ['dynamic', 'dynamic', 'static']
   goal_list: [
               [9.2, 5.0],
-              [3.0, 2.0]
+              [3.0, 2.0],
+              [0, 0]
               ]
 
